Update reality.txt, vmess_tvc.txt, vmess.txt and related files

--- a/vmess_clash.yaml
+++ b/vmess_clash.yaml
@@ -6,92 +6,136 @@ log-level: info
 ipv6: true
 external-controller: 0.0.0.0:9090
 proxies:
-  - {"name":"🇺🇸US-104.238.162.76-0192","type":"vmess","server":"104.238.162.76","port":20086,"cipher":"auto","uuid":"6cf93fe6-0062-4212-95aa-2aabca8b11bf","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US-137.175.124.167-0183","type":"vmess","server":"137.175.124.167","port":20086,"cipher":"auto","uuid":"b4bce500-11fe-4f8f-a344-01ac247af9bd","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
-  - {"name":"🏁RELAY-141.101.120.121-0272","type":"vmess","server":"1000ip.yangmie.online","port":8080,"cipher":"auto","uuid":"e9123cce-e4bd-46cf-8466-708b363a9807","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"gyde.aifjj.asia"}},"client-fingerprint":"chrome"}
-  - {"name":"🏁RELAY-172.67.214.33-0997","type":"vmess","server":"test.flha.ru","port":80,"cipher":"auto","uuid":"2bab6b8f-8d6e-463a-8331-b9de3d56921d","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/2bab6b8f-8d6e-463a-8331-b9de3d56921d-vmess","headers":{"host":"test.flha.ru"}},"client-fingerprint":"chrome"}
-  - {"name":"🏁RELAY-172.66.47.179-0200","type":"vmess","server":"cf.090227.xyz","port":8080,"cipher":"auto","uuid":"e9123cce-e4bd-46cf-8466-708b363a9807","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"gyde.aifjj.asia"}},"client-fingerprint":"chrome"}
-  - {"name":"🏁RELAY-172.66.168.223-0996","type":"vmess","server":"cloudgetservice.mcloudservice.site","port":443,"cipher":"auto","uuid":"37f464cb-b826-4278-9bf8-11bdf1ec892b","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/linvkws","headers":{"host":"Fra-Vp-123.BLaZECLOUD.Site"}},"client-fingerprint":"chrome"}
-  - {"name":"🇬🇧GB-64.227.45.92-0270","type":"vmess","server":"64.227.45.92","port":20086,"cipher":"auto","uuid":"5e02bc01-42a7-4609-b20a-4d93feea65c6","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US-209.126.84.189-4902","type":"vmess","server":"v2ray.codefyinc.com","port":443,"cipher":"auto","uuid":"2c981164-9b93-4bca-94ff-b78d3f8498d7","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/vmessws","headers":{"host":"v2ray.codefyinc.com"}},"client-fingerprint":"chrome"}
-  - {"name":"🇬🇧GB-173.208.51.193-0320","type":"vmess","server":"173.208.51.193","port":20086,"cipher":"auto","uuid":"b1726eb2-271b-4cb6-bae8-37647e78b776","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
-  - {"name":"🇭🇰HK-116.49.61.179-0719","type":"vmess","server":"hkt.gotochinatown.net","port":80,"cipher":"auto","uuid":"93fb69fc-77cf-11ee-85ee-f23c91369f2d","alterId":2,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"hkt.gotochinatown.net"}},"client-fingerprint":"chrome"}
-  - {"name":"🇨🇦CA-51.79.102.253-0946","type":"vmess","server":"51.79.102.253","port":80,"cipher":"auto","uuid":"58fe1542-5290-40ad-815a-77707a81afe5","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/IOebhLMhl1CTbFHbL95myfRX2","headers":{"host":""}},"client-fingerprint":"chrome"}
-  - {"name":"🇻🇳VN-161.248.30.3-0287","type":"vmess","server":"161.248.30.3","port":20086,"cipher":"auto","uuid":"1006a928-2021-4a3b-beb5-d5853c6281c5","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
-  - {"name":"🇭🇰HK-1.65.139.101-0976","type":"vmess","server":"1e426046-t0fds0-t12cnj-1ol97.hk.p5pv.com","port":80,"cipher":"auto","uuid":"93fb69fc-77cf-11ee-85ee-f23c91369f2d","alterId":2,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"broadcastlv.chat.bilibili.com"}},"client-fingerprint":"chrome"}
-  - {"name":"🇰🇷KR-183.109.131.75-0305","type":"vmess","server":"183.109.131.75","port":20086,"cipher":"auto","uuid":"b26c4803-0bca-467c-a245-c9a80bdd72ec","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US-206.206.80.227-0367","type":"vmess","server":"206.206.80.227","port":20086,"cipher":"auto","uuid":"0abb7b9e-81ba-4336-8ca7-056866032ff3","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US-38.106.3.14-0332","type":"vmess","server":"38.106.3.14","port":20086,"cipher":"auto","uuid":"766c0871-1359-4ae9-8921-0f468ec02722","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
-  - {"name":"🇹🇼TW-103.61.139.137-0369","type":"vmess","server":"103.61.139.137","port":20521,"cipher":"auto","uuid":"f8d93cfb-3d5d-447c-a697-16496dd74697","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US-209.126.84.189-0209","type":"vmess","server":"v2ray.codefyinc.com","port":443,"cipher":"auto","uuid":"2c981164-9b93-4bca-94ff-b78d3f8498d7","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"v2ray.codefyinc.com"}},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US-104.238.162.76-0158","type":"vmess","server":"104.238.162.76","port":20086,"cipher":"auto","uuid":"6cf93fe6-0062-4212-95aa-2aabca8b11bf","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US-137.175.124.167-0255","type":"vmess","server":"137.175.124.167","port":20086,"cipher":"auto","uuid":"b4bce500-11fe-4f8f-a344-01ac247af9bd","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US-209.126.84.189-5045","type":"vmess","server":"v2ray.codefyinc.com","port":443,"cipher":"auto","uuid":"2c981164-9b93-4bca-94ff-b78d3f8498d7","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/vmessws","headers":{"host":"v2ray.codefyinc.com"}},"client-fingerprint":"chrome"}
+  - {"name":"🇬🇧GB-64.227.45.92-0261","type":"vmess","server":"64.227.45.92","port":20086,"cipher":"auto","uuid":"5e02bc01-42a7-4609-b20a-4d93feea65c6","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🏁RELAY-172.67.214.33-5089","type":"vmess","server":"test.flha.ru","port":80,"cipher":"auto","uuid":"2bab6b8f-8d6e-463a-8331-b9de3d56921d","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/2bab6b8f-8d6e-463a-8331-b9de3d56921d-vmess","headers":{"host":"test.flha.ru"}},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US-207.174.28.20-0271","type":"vmess","server":"207.174.28.20","port":20086,"cipher":"auto","uuid":"c6e3e775-ea56-4dcd-950b-c323117367f4","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🇭🇰HK-1.65.197.79-0956","type":"vmess","server":"1e426046-t0fds0-t12cnj-1ol97.hk.p5pv.com","port":80,"cipher":"auto","uuid":"93fb69fc-77cf-11ee-85ee-f23c91369f2d","alterId":2,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"broadcastlv.chat.bilibili.com"}},"client-fingerprint":"chrome"}
+  - {"name":"🇭🇰HK-116.49.61.179-4895","type":"vmess","server":"hkt.gotochinatown.net","port":80,"cipher":"auto","uuid":"93fb69fc-77cf-11ee-85ee-f23c91369f2d","alterId":2,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"hkt.gotochinatown.net"}},"client-fingerprint":"chrome"}
+  - {"name":"🏁RELAY-141.101.120.213-0173","type":"vmess","server":"1000ip.yangmie.online","port":8080,"cipher":"auto","uuid":"e9123cce-e4bd-46cf-8466-708b363a9807","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"gyde.aifjj.asia"}},"client-fingerprint":"chrome"}
+  - {"name":"🏁RELAY-172.66.44.77-0174","type":"vmess","server":"cf.090227.xyz","port":8080,"cipher":"auto","uuid":"e9123cce-e4bd-46cf-8466-708b363a9807","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"gyde.aifjj.asia"}},"client-fingerprint":"chrome"}
+  - {"name":"🇰🇷KR-183.109.131.75-0240","type":"vmess","server":"183.109.131.75","port":20086,"cipher":"auto","uuid":"b26c4803-0bca-467c-a245-c9a80bdd72ec","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🏁RELAY-172.66.168.228-0692","type":"vmess","server":"cloudgetservice.mcloudservice.site","port":443,"cipher":"auto","uuid":"37f464cb-b826-4278-9bf8-11bdf1ec892b","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/linvkws","headers":{"host":"Fra-Vp-123.BLaZECLOUD.Site"}},"client-fingerprint":"chrome"}
+  - {"name":"🏁RELAY-205.233.181.3-1014","type":"vmess","server":"205.233.181.3","port":443,"cipher":"auto","uuid":"de94cc0a-0592-4969-b1fc-97ea8f0ea0b3","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/us.kkp.me.eu.org/aa","headers":{"host":"farid.1.berozha.ir"}},"client-fingerprint":"chrome"}
+  - {"name":"🇨🇦CA-51.79.102.253-0926","type":"vmess","server":"51.79.102.253","port":80,"cipher":"auto","uuid":"58fe1542-5290-40ad-815a-77707a81afe5","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/IOebhLMhl1CTbFHbL95myfRX2","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🇬🇧GB-173.208.51.193-0297","type":"vmess","server":"173.208.51.193","port":20086,"cipher":"auto","uuid":"b1726eb2-271b-4cb6-bae8-37647e78b776","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US-206.206.80.227-0325","type":"vmess","server":"206.206.80.227","port":20086,"cipher":"auto","uuid":"0abb7b9e-81ba-4336-8ca7-056866032ff3","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US-38.106.3.14-0295","type":"vmess","server":"38.106.3.14","port":20086,"cipher":"auto","uuid":"766c0871-1359-4ae9-8921-0f468ec02722","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🇹🇼TW-103.61.139.137-0330","type":"vmess","server":"103.61.139.137","port":20521,"cipher":"auto","uuid":"f8d93cfb-3d5d-447c-a697-16496dd74697","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🇸🇬SG-103.253.26.20-0151","type":"vmess","server":"103.253.26.20","port":443,"cipher":"auto","uuid":"aba50dd4-5484-3b05-b14a-4661caf862d5","alterId":4,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/ws","headers":{"host":"zecjk.com"}},"client-fingerprint":"chrome"}
+  - {"name":"🇸🇬SG-202.61.141.130-0150","type":"vmess","server":"202.61.141.130","port":443,"cipher":"auto","uuid":"aba50dd4-5484-3b05-b14a-4661caf862d5","alterId":4,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/ws","headers":{"host":"202.61.141.130"}},"client-fingerprint":"chrome"}
+  - {"name":"🇸🇬SG-180.215.130.123-0147","type":"vmess","server":"180.215.130.123","port":46452,"cipher":"auto","uuid":"c5414fe0-018b-473a-aa3b-f210f2ba42f5","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"180.215.130.123"}},"client-fingerprint":"chrome"}
+  - {"name":"🇸🇬SG-103.253.26.134-0146","type":"vmess","server":"103.253.26.134","port":443,"cipher":"auto","uuid":"aba50dd4-5484-3b05-b14a-4661caf862d5","alterId":4,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/ws","headers":{"host":"eeh7iewe.com"}},"client-fingerprint":"chrome"}
+  - {"name":"🇦🇺AU-103.224.212.215-0145","type":"vmess","server":"vjp3.0bad.com","port":443,"cipher":"auto","uuid":"927094d3-d678-4763-8591-e240d0bcae87","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/chat","headers":{"host":"vjp3.0bad.com"}},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US-209.126.84.189-0214","type":"vmess","server":"v2ray.codefyinc.com","port":443,"cipher":"auto","uuid":"2c981164-9b93-4bca-94ff-b78d3f8498d7","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"v2ray.codefyinc.com"}},"client-fingerprint":"chrome"}
+  - {"name":"🇦🇺AU-103.224.212.215-0144","type":"vmess","server":"vjp1.0bad.com","port":443,"cipher":"auto","uuid":"927094d3-d678-4763-8591-e240d0bcae87","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/chat","headers":{"host":"vjp1.0bad.com"}},"client-fingerprint":"chrome"}
+  - {"name":"🏁RELAY-172.67.75.172-0227","type":"vmess","server":"ip.sb","port":443,"cipher":"auto","uuid":"28548ef7-983d-4ee8-8bd6-7d71d905b5a2","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"fr.atlen.dpdns.org"}},"client-fingerprint":"chrome"}
+  - {"name":"🇻🇳VN-161.248.30.3-0230","type":"vmess","server":"161.248.30.3","port":20086,"cipher":"auto","uuid":"1006a928-2021-4a3b-beb5-d5853c6281c5","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🇮🇩ID-119.235.249.154-0234","type":"vmess","server":"119.235.249.154","port":20086,"cipher":"auto","uuid":"a067283b-3d00-4b0a-9ffb-3c184c83c089","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🏁RELAY-104.21.23.231-0235","type":"vmess","server":"test.flha.ru","port":80,"cipher":"auto","uuid":"2bab6b8f-8d6e-463a-8331-b9de3d56921d","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"test.flha.ru"}},"client-fingerprint":"chrome"}
 proxy-groups:
   - name: MANUAL
     type: select
     proxies:
       - URL-TEST
       - FALLBACK
-      - '🇺🇸US-137.175.124.167-0183'
-      - '🏁RELAY-141.101.120.121-0272'
-      - '🏁RELAY-172.67.214.33-0997'
-      - '🏁RELAY-172.66.47.179-0200'
-      - '🏁RELAY-172.66.168.223-0996'
-      - '🇬🇧GB-64.227.45.92-0270'
-      - '🇺🇸US-209.126.84.189-4902'
-      - '🇬🇧GB-173.208.51.193-0320'
-      - '🇭🇰HK-116.49.61.179-0719'
-      - '🇨🇦CA-51.79.102.253-0946'
-      - '🇻🇳VN-161.248.30.3-0287'
-      - '🇭🇰HK-1.65.139.101-0976'
-      - '🇰🇷KR-183.109.131.75-0305'
-      - '🇺🇸US-206.206.80.227-0367'
-      - '🇺🇸US-38.106.3.14-0332'
-      - '🇹🇼TW-103.61.139.137-0369'
-      - '🇺🇸US-209.126.84.189-0209'
+      - '🇺🇸US-137.175.124.167-0255'
+      - '🇺🇸US-209.126.84.189-5045'
+      - '🇬🇧GB-64.227.45.92-0261'
+      - '🏁RELAY-172.67.214.33-5089'
+      - '🇺🇸US-207.174.28.20-0271'
+      - '🇭🇰HK-1.65.197.79-0956'
+      - '🇭🇰HK-116.49.61.179-4895'
+      - '🏁RELAY-141.101.120.213-0173'
+      - '🏁RELAY-172.66.44.77-0174'
+      - '🇰🇷KR-183.109.131.75-0240'
+      - '🏁RELAY-172.66.168.228-0692'
+      - '🏁RELAY-205.233.181.3-1014'
+      - '🇨🇦CA-51.79.102.253-0926'
+      - '🇬🇧GB-173.208.51.193-0297'
+      - '🇺🇸US-206.206.80.227-0325'
+      - '🇺🇸US-38.106.3.14-0295'
+      - '🇹🇼TW-103.61.139.137-0330'
+      - '🇸🇬SG-103.253.26.20-0151'
+      - '🇸🇬SG-202.61.141.130-0150'
+      - '🇸🇬SG-180.215.130.123-0147'
+      - '🇸🇬SG-103.253.26.134-0146'
+      - '🇦🇺AU-103.224.212.215-0145'
+      - '🇺🇸US-209.126.84.189-0214'
+      - '🇦🇺AU-103.224.212.215-0144'
+      - '🏁RELAY-172.67.75.172-0227'
+      - '🇻🇳VN-161.248.30.3-0230'
+      - '🇮🇩ID-119.235.249.154-0234'
+      - '🏁RELAY-104.21.23.231-0235'
   - name: URL-TEST
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 60
     tolerance: 50
     proxies:
-      - '🇺🇸US-137.175.124.167-0183'
-      - '🏁RELAY-141.101.120.121-0272'
-      - '🏁RELAY-172.67.214.33-0997'
-      - '🏁RELAY-172.66.47.179-0200'
-      - '🏁RELAY-172.66.168.223-0996'
-      - '🇬🇧GB-64.227.45.92-0270'
-      - '🇺🇸US-209.126.84.189-4902'
-      - '🇬🇧GB-173.208.51.193-0320'
-      - '🇭🇰HK-116.49.61.179-0719'
-      - '🇨🇦CA-51.79.102.253-0946'
-      - '🇻🇳VN-161.248.30.3-0287'
-      - '🇭🇰HK-1.65.139.101-0976'
-      - '🇰🇷KR-183.109.131.75-0305'
-      - '🇺🇸US-206.206.80.227-0367'
-      - '🇺🇸US-38.106.3.14-0332'
-      - '🇹🇼TW-103.61.139.137-0369'
-      - '🇺🇸US-209.126.84.189-0209'
+      - '🇺🇸US-137.175.124.167-0255'
+      - '🇺🇸US-209.126.84.189-5045'
+      - '🇬🇧GB-64.227.45.92-0261'
+      - '🏁RELAY-172.67.214.33-5089'
+      - '🇺🇸US-207.174.28.20-0271'
+      - '🇭🇰HK-1.65.197.79-0956'
+      - '🇭🇰HK-116.49.61.179-4895'
+      - '🏁RELAY-141.101.120.213-0173'
+      - '🏁RELAY-172.66.44.77-0174'
+      - '🇰🇷KR-183.109.131.75-0240'
+      - '🏁RELAY-172.66.168.228-0692'
+      - '🏁RELAY-205.233.181.3-1014'
+      - '🇨🇦CA-51.79.102.253-0926'
+      - '🇬🇧GB-173.208.51.193-0297'
+      - '🇺🇸US-206.206.80.227-0325'
+      - '🇺🇸US-38.106.3.14-0295'
+      - '🇹🇼TW-103.61.139.137-0330'
+      - '🇸🇬SG-103.253.26.20-0151'
+      - '🇸🇬SG-202.61.141.130-0150'
+      - '🇸🇬SG-180.215.130.123-0147'
+      - '🇸🇬SG-103.253.26.134-0146'
+      - '🇦🇺AU-103.224.212.215-0145'
+      - '🇺🇸US-209.126.84.189-0214'
+      - '🇦🇺AU-103.224.212.215-0144'
+      - '🏁RELAY-172.67.75.172-0227'
+      - '🇻🇳VN-161.248.30.3-0230'
+      - '🇮🇩ID-119.235.249.154-0234'
+      - '🏁RELAY-104.21.23.231-0235'
   - name: FALLBACK
     type: fallback
     url: http://www.gstatic.com/generate_204
     interval: 60
     proxies:
-      - '🇺🇸US-137.175.124.167-0183'
-      - '🏁RELAY-141.101.120.121-0272'
-      - '🏁RELAY-172.67.214.33-0997'
-      - '🏁RELAY-172.66.47.179-0200'
-      - '🏁RELAY-172.66.168.223-0996'
-      - '🇬🇧GB-64.227.45.92-0270'
-      - '🇺🇸US-209.126.84.189-4902'
-      - '🇬🇧GB-173.208.51.193-0320'
-      - '🇭🇰HK-116.49.61.179-0719'
-      - '🇨🇦CA-51.79.102.253-0946'
-      - '🇻🇳VN-161.248.30.3-0287'
-      - '🇭🇰HK-1.65.139.101-0976'
-      - '🇰🇷KR-183.109.131.75-0305'
-      - '🇺🇸US-206.206.80.227-0367'
-      - '🇺🇸US-38.106.3.14-0332'
-      - '🇹🇼TW-103.61.139.137-0369'
-      - '🇺🇸US-209.126.84.189-0209'
+      - '🇺🇸US-137.175.124.167-0255'
+      - '🇺🇸US-209.126.84.189-5045'
+      - '🇬🇧GB-64.227.45.92-0261'
+      - '🏁RELAY-172.67.214.33-5089'
+      - '🇺🇸US-207.174.28.20-0271'
+      - '🇭🇰HK-1.65.197.79-0956'
+      - '🇭🇰HK-116.49.61.179-4895'
+      - '🏁RELAY-141.101.120.213-0173'
+      - '🏁RELAY-172.66.44.77-0174'
+      - '🇰🇷KR-183.109.131.75-0240'
+      - '🏁RELAY-172.66.168.228-0692'
+      - '🏁RELAY-205.233.181.3-1014'
+      - '🇨🇦CA-51.79.102.253-0926'
+      - '🇬🇧GB-173.208.51.193-0297'
+      - '🇺🇸US-206.206.80.227-0325'
+      - '🇺🇸US-38.106.3.14-0295'
+      - '🇹🇼TW-103.61.139.137-0330'
+      - '🇸🇬SG-103.253.26.20-0151'
+      - '🇸🇬SG-202.61.141.130-0150'
+      - '🇸🇬SG-180.215.130.123-0147'
+      - '🇸🇬SG-103.253.26.134-0146'
+      - '🇦🇺AU-103.224.212.215-0145'
+      - '🇺🇸US-209.126.84.189-0214'
+      - '🇦🇺AU-103.224.212.215-0144'
+      - '🏁RELAY-172.67.75.172-0227'
+      - '🇻🇳VN-161.248.30.3-0230'
+      - '🇮🇩ID-119.235.249.154-0234'
+      - '🏁RELAY-104.21.23.231-0235'
 rules:
  - GEOIP,IR,DIRECT
  - MATCH,MANUAL
